<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical">


        <!-- days header -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:paddingTop="12dp"
            android:paddingRight="30dp"
            android:paddingBottom="12dp">

            <!-- date title -->
            <ImageButton
                android:id="@+id/calendar_prev_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/eventcard_textbg"
                android:src="@drawable/ic_arrow_left"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.08"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageButton
                android:id="@+id/calendar_next_button"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/eventcard_textbg"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.92"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/calendar_date_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/spartan_bold"
                android:text="@string/default_monthyear"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/calendar_header"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/CalendarDays"
                android:text="@string/SUN" />

            <TextView
                style="@style/CalendarDays"
                android:text="@string/MON" />

            <TextView
                style="@style/CalendarDays"
                android:text="@string/TUE" />

            <TextView
                style="@style/CalendarDays"
                android:text="@string/WED" />

            <TextView
                style="@style/CalendarDays"
                android:text="@string/THU" />

            <TextView
                style="@style/CalendarDays"
                android:text="@string/FRI" />

            <TextView
                style="@style/CalendarDays"
                android:text="@string/SAT" />
        </LinearLayout>

        <!-- days view -->
        <GridView
            android:id="@+id/calendar_grid"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:numColumns="7" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>